tweaked separability again to note classical logic not separable

--- a/forallx-adl-prooftfl.tex
+++ b/forallx-adl-prooftfl.tex
@@ -2270,9 +2270,10 @@ There are pros and cons to using DS as our disjunction elimination rule. You can
 \paragraph{Con} Adopting DS as a basic rule destroys the nice feature of our standard rules that only one connective is used in any rule. DS needs both disjunction and negation. This has several consequences.
 \begin{enumerate}
 	\item  We cannot accept the inferentialist account of the meanings of our connectives as given by their proof rules (§\ref{inferentialism}). The fact that DS shackles negation and disjunction together means that we cannot see the rule as purely about the meaning of disjunction.
-	\item It seems desirable that if a sentence is provable from some assumptions, then there should be a proof which only makes use of rules for those connectives that actually appear in the sentence or the assumptions. This feature is known as \define{separability}.\footnote{See Julien Murzi (2020) ‘Classical Harmony and Separability’, \emph{Erkenntnis} \textbf{85} (2020): 391–415, \httpurl{https://doi.org/10.1007/s10670-018-0032-6}, at p. 395.}  Consider the sentence `$(A \eor B) \eif (B\eor A)$'; in our system, there is a proof of this sentence which involves only rules for conditional and disjunction (this is left for an exercise). The rules of our system are separable. But DS makes the rules non-separable. A proof of `$(A \eor B) \eif (B\eor A)$' in a system which has DS as a basic rule makes unavoidable use of negation rules. Thus even arguments which have intuitively nothing to do with negation end up having to use negation in their proof. 
+	\item It seems desirable that if a sentence is provable from some assumptions, then there should be a proof which only makes use of rules for those connectives that actually appear in the sentence or the assumptions. This feature is known as \define{separability}.\footnote{See Julien Murzi (2020) ‘Classical Harmony and Separability’, \emph{Erkenntnis} \textbf{85} (2020): 391–415, \httpurl{https://doi.org/10.1007/s10670-018-0032-6}, at p. 395.}  Consider the sentence `$(A \eor B) \eif (B\eor A)$'; in our system, there is a proof of this sentence which involves only rules for conditional and disjunction (this is left for an exercise). But DS makes the rules non-separable. A proof of `$(A \eor B) \eif (B\eor A)$' in a system which has DS as a basic rule makes unavoidable use of negation rules. Thus even arguments which have intuitively nothing to do with negation end up having to use negation in their proof.\footnote{Admittedly the system of \TFL\ as a whole is \emph{not} separable. Consider `$(A \eif B) \eor (B \eif A)$'. This is a logical truth in \TFL, but it cannot be proved using only the conditional and disjunction rules – you need to use negation elimination. (Showing this takes us beyond the content of this course, and into the foundations of intuitionistic logic: see §\ref{construct}.)} 
  	\item We cannot consider a system which lacks negation rules but has disjunction. This is not especially important for \TFL, but could be important if you go on to consider other logical systems which may vary the rules for one connective independently of all the others.
- \end{enumerate}.
+ \end{enumerate}
+
 
 \section{Doing Without Negation Introduction} 
 
