tiny edit to material on interpretations

--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -192,6 +192,7 @@ We begin by demarcating a region on the page to represent the domain – typical
 	\item If two predicates have extensions that overlap, the regions that represent them in the diagram should overlap.
 	\item If one predicate has an extension that is entirely within the extension of another predicate, the region associated with the first should be entirely within the region associated with the second;
 	\item If two predicates have nonoverlapping extensions, the regions that represent them should not overlap.
+	\item Every region in the diagram is assumed to contain some individuals – e.g., if two regions intersect, there are some things in the intersection. However, the size of the regions \emph{does not} represent the number of individuals in the region. (The diagram indicates that various extensions and their intersections are non-empty, but not how mant individuals they contain.) 
 \end{itemize} We then label and shade each region to enable us to tell which predicates they are associated with. We may also add labelled dots to denote individuals who may fall into various predicate extensions.
 
 These rules are quite abstract, but they are easy to apply in practice. Suppose we are given the following interpretation: \begin{ekey}
