--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -10,8 +10,8 @@
 \usepackage{fontspec}
 \defaultfontfeatures{Mapping=tex-text,Scale=MatchLowercase}
 \setmainfont[Numbers=OldStyle,Ligatures={Common}]{Constantia} % Æ loathes Computer Modern
-\setsansfont[Numbers=OldStyle,Ligatures={Common}]{Calibri}
-\setmonofont[Scale=MatchLowercase]{Consolas}
+\setsansfont[Numbers=OldStyle,Ligatures={Common}]{Avenir Next}
+\setmonofont[Scale=MatchLowercase]{Menlo}
 \usepackage{mathtools}
 \usepackage[math-style=ISO,mathbf=sym,bold-style=ISO,mathsf=text,warnings-off={mathtools-colon,mathtools-overbracket}]{unicode-math}
 \setoperatorfont{\rmfamily}
