--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -270,7 +270,7 @@ Return briefly to another example we discussed earlier: \begin{earg}
  		\item[So:] $a$ is a \meta{G}.
  	\end{earg} For most adjectives \meta{F}, this structure yields a conclusive argument when you replace the schematic letters by English words. E.g., \begin{earg}
  		\item[] Bob is a tall man;
- 		\item[So:] Bob is tall.
+ 		\item[So:] Bob is a man.
  	\end{earg} But not all: some adjectives like `fake' or `alleged' do not yield conclusive arguments when substituted for \meta{F}: `This is a fake gun; so this is a gun' is not a conclusive argument. We will return in §\ref{s:FOLBuildingBlocks} to the logical structure of examples like these, and to expressions like `fake gun' in §\ref{s:complex_adj}.
 
 
@@ -291,13 +291,15 @@ Many good arguments are inconclusive and invalid. Consider this one:
 		\item[] In January 1998, it rained in London.
 		\item[] In January 1999, it rained in London.
 		\item[] In January 2000, it rained in London.
-	\item[So:] It rains every January in London.
+	\item[So:] It will rain next January in London.
 \end{earg}
-This argument generalises from observations about several cases to a conclusion about all cases. Though it is invalid, that doesn't mean it is a bad argument. The premises appear to provide some support for the conclusion, though it falls short of being conclusive. 
+This argument generalises from observations about several cases to a conclusion about a future case. Though it is invalid, that doesn't mean it is a bad argument. The premises appear to provide some support for the conclusion, though it falls short of being conclusive. 
 
-\define{Induction} describes a form of reasoning from evidence to hypotheses about that evidence. For example, when we reason from a sample of eligible voters to a hypothesis about how the whole population will vote, we are reasoning inductively. \define{Inductive logic} is the attempt to generalise deductive logic to evaluate arguments in line with the canons of good inductive reasoning. The proponents of inductive logic think there might be a generalisation of deductive logic which enables us to evaluate arguments in a more fine-grained way than the options we've canvassed so far (i.e., just `valid', and `invalid and conclusive' and `invalid and inconclusive'). A significant part of the project of inductive logic is the attempt to classify inconclusive arguments in terms of whether their premises provide good inductive evidence in favour of their conclusions. 
+\define{Induction} describes a form of reasoning from evidence to hypotheses about that evidence. In the above example, we draw a conclusion that the pattern we've seen in the evidence to date will continue, at least in the short term. Another example: when we reason from a sample of eligible voters to a hypothesis about how the whole population will vote, we are reasoning inductively. \define{Inductive logic} is the attempt to generalise deductive logic to evaluate arguments in line with the canons of good inductive reasoning. The proponents of inductive logic think there might be a generalisation of deductive logic which enables us to evaluate arguments in a more fine-grained way than the options we've canvassed so far (i.e., just `valid', and `invalid and conclusive' and `invalid and inconclusive'). A significant part of the project of inductive logic is the attempt to classify inconclusive arguments in terms of whether their premises provide good inductive evidence in favour of their conclusions.\footnote{The project of inductive logic was quickly seen to need resources going far beyond those of formal logic, and now inductive logics have more to do with probability theory than with logic strictly speaking. Branden Fitelson provides a useful overview in his `Inductive Logic', pp. 384--93 in Jessica Pfeifer and Sahotra Sarkar, eds., \emph{Philosophy of Science: an encyclopedia}, Routledge 2005.} 
 
-In the example, the premises are of the form `In January $n$, it rains', and the conclusion is of the form `Every January, it rains'. This argument thus has a general conclusion drawn from instances of that generalisation. (That is, `it rains in January 1997' is an instance of the generalisation `it rains in January of every year'.) If we regard the foregoing premises as providing decent support for the conclusion, we might think that adding additional premises of the same sort before drawing the conclusion would make it even stronger: In January 2001, it rained in London; In January 2002\ldots. This principle, that a generalisation is increasingly supported the more instances we adduce, more might be part of our toolkit when evaluating arguments inductively. But, no matter how many premises of this form we add, the argument will remain inconclusive. Even if it has rained in London in every January thus far, it remains \emph{possible} that London will stay dry next January. (Even if we include every instance – past, present, and future – the argument will be inconclusive, because one will need the additional premise \emph{that there are no other instances than those we've included}.)
+In the example, the premises are of the form `In January $n$, it rains', and the conclusion is of the form `Next January, it rains'. This argument is inconclusive, as nothing in the premises by themselves necessitates anything about a future unobserved case. It might well be that the premises provide decent support for that conclusion; weather might be hard to predict, but broad climate patterns such as this one we do expect to continue, at least over short time scales. We might think that even more instances of the pattern, yet further premises of the same sort, would make the support of the conclusion even stronger. This principle – that the existence of an ongoing pattern is increasingly supported the more instances we adduce – might be part of our toolkit when evaluating arguments inductively. But, no matter how many premises of this form we add, the argument will remain inconclusive. Even if it has rained in London in every January thus far, it remains \emph{possible} that London will stay dry next January. The same goes for the example of extrapolating from sample data. In that case, the inductive argument has a general conclusion drawn from a narrower body of data. (That is, `the population has a certain distribution' is made plausible by the particular data `this sample has a certain distribution'.) The larger the sample, the better the inductive support it provides, until we survey the whole population.\footnote{Even in that case, the argument will be inconclusive, because we will need the additional premise \emph{this sample is the whole population} to rule out the possibility that there are other individuals not yet captured in our data.}
+
+
 
 The point of all this is that most arguments which are inductively very strong are not (deductively) valid. Arguments which represent very good examples of inductive reasoning generally are not \emph{watertight}. Unlikely though it might be, it is \emph{possible} for their conclusion to be false, even when all of their premises are true. In this book, our interest is simply in sorting the (deductively) valid arguments from the invalid ones. The project of inductive logic, of sorting the invalid arguments further into the inductively good and poor ones, we shall set aside entirely from here on. 
 
