--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -9,16 +9,16 @@
 % XeLaTeX font commands - Æ
 \usepackage{fontspec}
 \defaultfontfeatures{Mapping=tex-text,Scale=MatchLowercase}
-\setmainfont[Numbers=OldStyle,Ligatures={Common}]{Constantia} % Æ loathes Computer Modern
-\setsansfont[Numbers=OldStyle,Ligatures={Common}]{Avenir Next}
-\setmonofont[Scale=MatchLowercase]{Menlo}
+\setmainfont[Numbers=OldStyle,Ligatures={Common}]{Palatino Linotype} % Æ loathes Computer Modern
+\setsansfont[Numbers=OldStyle,Ligatures={Common},Scale=MatchLowercase,ScaleAgain=0.93,BoldFont={Avenir Next Demi Bold},BoldItalicFont={Avenir Next Demi Bold Italic}]{Avenir Next}
+\setmonofont[Scale=MatchLowercase]{Iosevka Fixed Light}
 \usepackage{mathtools}
 \usepackage[math-style=ISO,mathbf=sym,bold-style=ISO,mathsf=text,warnings-off={mathtools-colon,mathtools-overbracket}]{unicode-math}
 \setoperatorfont{\rmfamily}
-\setmathfont[Scale=MatchLowercase]{Cambria Math}
-% \setmathfont[range=up/{num},Numbers=OldStyle]{Constantia}
+\setmathfont[Scale=MatchLowercase,ScaleAgain=0.94]{STIX Two Math}
+% \setmathfont[range=up/{num},Numbers=OldStyle]{Palatino Linotype}
 \newfontfamily\cjkfont{Kaiti SC Regular}
-\newfontfamily\dispfont[Numbers=OldStyle,Ligatures={Common},SizeFeatures={{Size=12-,Scale=2}}]{Constantia Bold Italic}
+\newfontfamily\dispfont[Numbers=OldStyle,Ligatures={Common},SizeFeatures={{Size=12-,Scale=2}}]{Palatino Linotype Bold Italic}
 
 % packages added by Æ
 
