--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -48,7 +48,7 @@ This book, like its predecessors, is released under a Creative Commons license (
 
 \vfill
 
-Typesetting was carried out entirely in \XeLaTeX\ using the \texttt{Memoir} class. The body text is set in Constantia; math is set in Cambria Math; sans serif in Avenir Next; and monospaced text in Menlo. The style for typesetting proofs is based on \texttt{fitch.sty} (v0.4) by Peter Selinger, University of Ottawa.
+Typesetting was carried out entirely in \XeLaTeX\ using the \texttt{Memoir} class. The body text is set in Palatino Linotype; math is set in STIX Two Math; sans serif in Avenir Next; and monospaced text in Iosevka Fixed Light. The style for typesetting proofs is based on \texttt{fitch.sty} (v0.4) by Peter Selinger, University of Ottawa.
 
 \begin{quote}
 	\emph{Kaurna miyurna, Kaurna yarta, ngai tampinthi.}\\
